--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 
-		<!--Main Container-->
+		<!--Main Content-->
 		<div class="main-content">
 			<div class="container text-center hero">
 				<h1>Random Quote Generator</h1>
@@ -26,6 +26,7 @@
 				<button type="button" class="btn btn-primary" id="tweet-btn"><i class="fa fa-twitter"></i> Tweet It</button>
 			</div>
 		</div>
+		<!--End Main Content-->
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
